@@ -3,4 +3,4 @@
 ##
   Meta:		1
   Name:		powerman
-  Version:	2.2.2
+  Version:	2.3
