@@ -1,3 +1,7 @@
+2008-11-12 Jim Garlick <garlick@llnl.gov>
+
+	* etc/powerman.conf.example : Renamed from powerman.conf.
+
 2008-11-11 Jim Garlick <garlick@llnl.gov>
 
 	* parse_util.c : Declare config invalid if no nodes are defined.
